# StellarEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  PrettyPrint.inc  readme.md  vcpkg.json
Stellar/: CMakeLists.txt  Makefile
Stellar/src/: Stellar.h  stlrpch.h
Stellar/src/Stellar/: Application.cpp  Application.h  Core.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Window.cpp  Window.h
Stellar/src/Stellar/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  STLRBase.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Stellar/src/Stellar/Editor/: ConsoleMessage.h  ConsolePanel.cpp  ConsolePanel.h  ConsoleSink.h  EditorCamera.cpp  EditorCamera.h  EditorPanel.h
Stellar/src/Stellar/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Stellar/src/Stellar/ImGUI/: ImGuiLayer.cpp  ImGuiLayer.h  imgui_impl_glfw.d
Stellar/src/Stellar/ImGui/: Colors.h  ImGuiFont.cpp  ImGuiFont.h  ImGuiLayer.cpp  ImGuiLayer.h  WebFont.h
Stellar/src/Stellar/Maths/: Math.cpp  Math.h
Stellar/src/Stellar/Platform/Metal/: MetalAPI.h  glfw_bridge.mm
Stellar/src/Stellar/Platform/Metal/Buffer/: MetalBuffer.cpp  MetalBuffer.h  MetalFrameBuffer.cpp  MetalFrameBuffer.h  MetalUniformBuffer.cpp  MetalUniformBuffer.h  MetalUniformBufferSet.cpp  MetalUniformBufferSet.h
Stellar/src/Stellar/Platform/Metal/CommandBuffer/: MetalCommandBuffer.h
Stellar/src/Stellar/Platform/Metal/Device/: MetalDevice.cpp  MetalDevice.h
Stellar/src/Stellar/Platform/Metal/ImGui/: MetalImGuiLayer.cpp  MetalImGuiLayer.h  imgui_impl_metal.h  imgui_impl_metal.mm
Stellar/src/Stellar/Platform/Metal/Material/: MetalMaterial.cpp  MetalMaterial.h
Stellar/src/Stellar/Platform/Metal/Pipeline/: MetalPipeline.cpp  MetalPipeline.h
Stellar/src/Stellar/Platform/Metal/RenderPass/: MetalRenderPass.cpp  MetalRenderPass.h
Stellar/src/Stellar/Platform/Metal/Renderer/: MetalRenderer.cpp  MetalRenderer.h  MetalRendererContext.cpp  MetalRendererContext.h
Stellar/src/Stellar/Platform/Metal/Shader/: MetalShader.cpp  MetalShader.h
Stellar/src/Stellar/Platform/Metal/SwapChain/: MetalSwapChain.cpp  MetalSwapChain.h
Stellar/src/Stellar/Platform/Metal/Texture/: MetalTexture.cpp  MetalTexture.h
Stellar/src/Stellar/Platform/Vulkan/: VulkanCommon.h
Stellar/src/Stellar/Platform/Vulkan/Buffer/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanUniformBufferSet.cpp  VulkanUniformBufferSet.h
Stellar/src/Stellar/Platform/Vulkan/Command/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h
Stellar/src/Stellar/Platform/Vulkan/Descriptor/: DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h
Stellar/src/Stellar/Platform/Vulkan/Device/: VulkanDevice.cpp  VulkanDevice.h
Stellar/src/Stellar/Platform/Vulkan/ImGUI/: VulkanImGuiLayer.cpp  VulkanImGuiLayer.h  imgui_impl_vulkan.cpp
Stellar/src/Stellar/Platform/Vulkan/ImGui/: VulkanImGuiLayer.cpp  VulkanImGuiLayer.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
Stellar/src/Stellar/Platform/Vulkan/Image/: VulkanImage.cpp  VulkanImage.h
Stellar/src/Stellar/Platform/Vulkan/Instance/: VulkanInstance.cpp  VulkanInstance.h  VulkanValidationLayer.cpp  VulkanValidationLayer.h
Stellar/src/Stellar/Platform/Vulkan/Material/: VulkanMaterial.cpp  VulkanMaterial.h
Stellar/src/Stellar/Platform/Vulkan/Pipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h  Pipeline.cpp  Pipeline.h  VulkanPipeline.cpp  VulkanPipeline.h
Stellar/src/Stellar/Platform/Vulkan/Queue/: Queue.h
Stellar/src/Stellar/Platform/Vulkan/RenderPass/: ImGuiRenderPass.cpp  ImGuiRenderPass.h  RenderPass.cpp  RenderPass.h  StandardRenderPass.cpp  StandardRenderPass.h  VulkanRenderPass.cpp  VulkanRenderPass.h
Stellar/src/Stellar/Platform/Vulkan/Renderer/: VulkanRenderer.cpp  VulkanRenderer.h  VulkanRendererContext.cpp  VulkanRendererContext.h
Stellar/src/Stellar/Platform/Vulkan/Shader/: Shader.cpp  Shader.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderCompiler.cpp  VulkanShaderCompiler.h
Stellar/src/Stellar/Platform/Vulkan/SwapChain/: SwapChain.cpp  SwapChain.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h
Stellar/src/Stellar/Platform/Vulkan/Texture/: VulkanTexture.cpp  VulkanTexture.h
Stellar/src/Stellar/Render/Vulkan/: VulkanCommon.h
Stellar/src/Stellar/Render/Vulkan/Buffer/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  VertexBuffer.cpp  VertexBuffer.h
Stellar/src/Stellar/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CommandBuffer.cpp  CommandBuffer.h  FrameBuffer.cpp  FrameBuffer.h  Image.cpp  Image.h  Material.cpp  Material.h  OrthographicCamera.cpp  OrthographicCamera.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h  RendererContext.cpp  RendererContext.h  RendererContext.h.cpp  Shader.cpp  Shader.h  ShaderUniforms.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  UniformBufferSet.cpp  UniformBufferSet.h  Uniforms.h
Stellar/src/Stellar/Scene/: Components.h  Entity.cpp  Entity.h  Quad.cpp  Quad.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h
Stellar/src/Stellar/Utils/: FileUtil.cpp  FileUtil.h
StellarEditor/: CMakeLists.txt  Makefile
StellarEditor/Assets.xcassets/AppIcon.appiconset/: Contents.json
StellarEditor/Resources/Scenes/: TestScene.stlr
StellarEditor/Resources/Shader/Metal/: grid.metal  shader.metal
StellarEditor/Resources/Shader/Vulkan/: basicShader.glsl  grid.glsl  shader.glsl
StellarEditor/src/: Editor.cpp  EditorLayer.cpp  EditorLayer.h  Sandbox2D.h
StellarEditor/src/Panels/: ResourcePanel.cpp  ResourcePanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
(+63 files in other folders)
